# PureRemove-AppWeb

./: .gitignore  README.md
deploy/: deploy.sh  nginx-pureremove.conf
server/: Cargo.toml
server/src/: image_processor.rs  main.rs  ml_engine.rs
web/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
web/src/: App.tsx
web/src/components/: BatchList.tsx  DropZone.tsx  OutputOptions.tsx  SplitPreview.tsx
web/src/lib/: api.ts  utils.ts
web/src/styles/: globals.css
web/src/types/: index.ts
