[package]
name = "pureremove-server"
version = "1.0.0"
edition = "2021"

[dependencies]
axum           = { version = "0.8", features = ["multipart"] }
tokio          = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
tower-http     = { version = "0.6", features = ["fs", "limit", "trace", "timeout"] }
tower_governor = "0.7"
tracing            = "0.1"
tracing-subscriber = "0.3"

serde      = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow     = "1"
rayon      = "1"

# ML inference (mêmes versions que PureRemove desktop — code audité)
ort = { version = "=2.0.0-rc.12", features = ["download-binaries"] }

# Image processing
image = { version = "0.25", default-features = false, features = [
    "png", "jpeg", "webp",
    "gif", "bmp", "tiff", "ico",
    "tga", "pnm", "hdr", "ff", "qoi",
    "rayon",
] }
resvg = "0"

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
strip         = true
